--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@ table.tbl_point-list img {
 }
 
 .row_slot .img_sizemax {
-	width:100%;
-	height:100%;
+	width:300px;
+	height:300px;
 	border:0px;
 }
 
